--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,7 @@
             "outputPath": "dist/demo",
             "polyfills": ["zone.js"],
             "scripts": [],
-            "styles": ["src/global_styles.css"],
+            "styles": ["src/global-styles.css"],
             "tsConfig": "tsconfig.app.json"
           }
         },
