--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/build": "^21.0.2",
     "@angular/cli": "^21.0.2",
     "@angular/compiler-cli": "^21.0.3",
+    "@biomejs/biome": "^2.3.10",
     "typescript": "^5.9.3"
   }
 }
