--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "angular-starter",
-  "private": true,
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "build:icons": "svgstore -o src/assets/icons/icons.svg src/assets/icons/*.svg"
-  },
-  "dependencies": {
-    "@angular/animations": "^21.0.3",
-    "@angular/common": "^21.0.3",
-    "@angular/compiler": "^21.0.3",
-    "@angular/core": "^21.0.3",
-    "@angular/forms": "^21.0.3",
-    "@angular/platform-browser": "^21.0.3",
-    "@angular/router": "^21.0.3",
-    "rxjs": "^7.8.1",
-    "tslib": "^2.5.0",
-    "zone.js": "^0.16.0"
-  },
-  "devDependencies": {
-    "@angular/build": "^21.0.2",
-    "@angular/cli": "^21.0.2",
-    "@angular/compiler-cli": "^21.0.3",
-    "@biomejs/biome": "^2.3.10",
-    "svgstore-cli": "^2.0.1",
-    "typescript": "^5.9.3"
-  }
+    "name": "angular-starter",
+    "private": true,
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "icons:optimize": "svgo -f src/icons --config svgo.config.cjs",
+        "icons:sprite": "svgstore --inline -o src/assets/icons.svg \"src/icons/*.svg\" && node scripts/fix-sprite-xmlns.mjs",
+        "icons:build": "npm run icons:optimize && npm run icons:sprite"
+    },
+    "dependencies": {
+        "@angular/animations": "^21.0.3",
+        "@angular/common": "^21.0.3",
+        "@angular/compiler": "^21.0.3",
+        "@angular/core": "^21.0.3",
+        "@angular/forms": "^21.0.3",
+        "@angular/platform-browser": "^21.0.3",
+        "@angular/router": "^21.0.3",
+        "rxjs": "^7.8.1",
+        "tslib": "^2.5.0",
+        "zone.js": "^0.16.0"
+    },
+    "devDependencies": {
+        "@angular/build": "^21.0.2",
+        "@angular/cli": "^21.0.2",
+        "@angular/compiler-cli": "^21.0.3",
+        "@biomejs/biome": "^2.3.10",
+        "svgo": "^4.0.0",
+        "svgstore-cli": "^2.0.1",
+        "typescript": "^5.9.3"
+    }
 }
